# RTSP-Projs

./: .gitignore  CLAUDE.md  README.md  build-rtsp-player.sh  build-rtsp-pusher.sh
RTSP-Player/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
RTSP-Player/docs/: RTSP-Player-Progress-Activity.md  csv-metrics-reference.md  progress-tracking-2026-06-10.md  rtsp-player-design.md  validation-report-2026-06-11.md
RTSP-Player/docs/superpowers/specs/: 2026-06-10-rtsp-player-design.md
RTSP-Player/src/: AVClock.cpp  AVClock.h  AudioRingBuffer.cpp  AudioRingBuffer.h  AudioWorker.cpp  AudioWorker.h  Common.h  DemuxThread.cpp  DemuxThread.h  PacketQueue.cpp  PacketQueue.h  PlayerStateMachine.cpp  PlayerStateMachine.h  PlayerStats.cpp  PlayerStats.h  RTSPlayer.cpp  RTSPlayer.h  SDLAudio.cpp  SDLAudio.h  SDLRenderer.cpp  SDLRenderer.h  StreamLifecycleManager.cpp  StreamLifecycleManager.h  VideoDecodeThread.cpp  VideoDecodeThread.h  VideoFrameQueue.cpp  VideoFrameQueue.h  main.cpp
RTSP-Player/src/logger/: Logger.cpp  Logger.h
RTSP-Pusher/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
RTSP-Pusher/docs/: .log-summary.json  CSV指标说明与异常排查指南.md  env-info-baseline.md  rtsp-pusher-design.md  rtsp-pusher-development-plan.md  rtsp-pusher-optimization-plan-2026-06-20.md  rtsp-pusher-v2-development-plan.md  v2-baseline-report-2026-06-18.md  validation-report-2026-06-17.md
RTSP-Pusher/docs/superpowers/plans/: 2026-06-18-v2.0-baseline-audit.md
RTSP-Pusher/docs/superpowers/specs/: 2026-06-18-v2.0-baseline-audit-design.md
RTSP-Pusher/src/: AudioEncodeThread.cpp  AudioEncodeThread.h  AudioRingBuffer.cpp  AudioRingBuffer.h  Common.h  EncodedPacketQueue.cpp  EncodedPacketQueue.h  GpuVideoEncodeThread.cpp  GpuVideoEncodeThread.h  HardwareEncoderDetector.cpp  HardwareEncoderDetector.h  PtsUtils.h  PusherConfig.h  PusherLifecycleManager.cpp  PusherLifecycleManager.h  PusherStateMachine.cpp  PusherStateMachine.h  PusherStats.cpp  PusherStats.h  RTSPMuxThread.cpp  RTSPMuxThread.h  RTSPusher.cpp  RTSPusher.h  SDLAudioCapture.cpp  SDLAudioCapture.h  ScreenCaptureThread.cpp  ScreenCaptureThread.h  VideoEncodeThread.cpp  VideoEncodeThread.h  VideoRawFrameQueue.cpp  VideoRawFrameQueue.h  main.cpp
RTSP-Pusher/src/logger/: Logger.cpp  Logger.h
RTSP-Server/: README.md
docs/: OS-Version.md  project-overview-logic.md  session-memory-2026-07-09.md
